@@ -1,3 +1,4 @@
+	* back-off tracker hostname looksups resulting in NXDOMAIN
 	* don't attempt sending event=stopped if event=start never succeeded
 	* make sure &key= stays consistent between different source IPs (as mandated by BEP7)
 	* fix binding sockets to outgoing interface
